syntax = "proto3";
option java_package = "edu.usfca.cs.dfs.controller";

message ClientTalk {
    string chunkName = 1;
    string hostName = 2;
    int32 chunkId = 3;
    string reqtype = 4;
    int32 portNum = 5;
    int32 numChunks = 6;
}

message StorageHearbeat {
    string chunkName = 1;
    string hostName = 2;
    int32 portnum = 3;
    int32 chunkId = 4;
}

message ListOfHostnames {
    repeated string hostnames=1;
}

message ControllerMessagePB {
    oneof msg {
        ClientTalk clienttalk = 1;
        StorageHearbeat storageHeartBeat = 2;
    }


}
